--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config user.name "bot"
           git config user.email "bot@github.com"
-          git add data/latest.json docs/data/latest.json data/history docs/data/history
+          git add data/latest.json docs/data/latest.json data/history.sqlite docs/data/history.sqlite data/history docs/data/history
           git commit -m "daily update" || echo "no changes"
           git push
